traces/bug_677.txt
src/fflib/lgmat.cpp:1085: error: DEAD_STORE
  The value written to &nbkU (type int) is never used.
Showing all 1 steps of the trace


src/fflib/lgmat.cpp:1085:3: Write of unused value
1083.   	    if (samemesh)
1084.   	      {
1085.   		nbkU = 1; 
          ^
1086.   		PV = ipmat.P;
1087.   		itV = it;
